# Data-X

./: .gitignore  .output.txt  AGENTS.md  CLAUDE.md  README.md  RESUMEN_AUDITORIA.md  backend_test.py  data-x-junie-corte2.md  data-x-junie-refactor-v3.md  data-x-monorepo-setup.md  data-x-plan-ejecucion.md  data-x-prompts-junie.md  data-x-siguiente-paso.md  design_guidelines.md  docker-compose.prod.yml  docker-compose.yml  plan.md  tracker.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  distributed_strategy.py  pyproject.toml  requirements.txt  scripts.sh  server.py
backend/app/: main.py  utils.py  worker.py
backend/app/api/routes/: analyze.py  auth.py  base.py  health.py  opensearch_strategy.py  reports.py  sessions.py
backend/app/core/: config.py  logging.py  rate_limit.py  telemetry.py
backend/app/db/: client.py
backend/app/repositories/: mongo.py
backend/app/schemas/: analysis_response.py  analyze.py  auth.py  chart_spec.py  finding.py  fraud.py  medallion.py  profiling.py  provenance.py  report.py  session.py  validation_rules.py
backend/app/services/: analysis_agent.py  artifact_builder.py  auth_service.py  benford_service.py  chart_spec_generator.py  docling_quality_gate.py  document_chunking_service.py  eda_extended.py  embedding_service.py  explanation_templates.py  finding_builder.py  fiscal_validator.py  fraud_guard.py  ingest.py  job_queue.py  llm_service.py  normalization.py  opencv_pipeline.py  pdf_forensics.py  pipeline_orchestrator.py  profiler.py  provenance.py  schema_validator.py  statistical_tests.py  stats_engine.py  suggested_questions_service.py  validation.py  validation_rules_service.py
backend/app/services/ingestion/: base.py  distributed_strategy.py
backend/backend/tests/: verify_c2.py
backend/tests/: conftest.py  test_analysis_agent.py  test_analyze_faiss.py  test_auth.py  test_context_builder.py  test_docling_chunking_service.py  test_docling_eval.py  test_embeddings.py  test_mongo_repo.py  test_opencv_pipeline.py  test_pipeline_orchestrator.py  test_preview.py  test_redis_config.py  test_report.py  test_sensitive_data_guard.py  test_services.py  test_sessions.py  test_statistical_tests.py  test_validation_rules.py  verify_c2.py  verify_f1.py
backend/tests/fixtures/: edge_cases.csv  test_data.xlsx
frontend/: .env  (+1 more)
(+130 files in other folders)
